agregar mejora en globalhanblerexception handler